# proto-converter

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
src/proto_converter/: __init__.py  converter.py
tests/: conftest.py  gen_protos.sh  test_converter.py
tests/protos/remapped_api/: api.proto
tests/protos/remapped_internal/: internal.proto
tests/protos/test_api/: api.proto
tests/protos/test_internal/: internal.proto
tests/test_protos/: pyproject.toml
