[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "proto-converter"
version = "0.1.0"
description = "Automatic conversion between compatible protocol buffers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["protobuf>=4.21.0"]

[dependency-groups]
dev = ["pytest>=8.0", "grpcio-tools>=1.60.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tests/gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
