[project]
name = "test-protos"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["protobuf>=4.21.0"]

[build-system]
# Need hatchling (instead of uv_build) for multiple packages.
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_api", "src/test_internal", "src/remapped_api", "src/remapped_internal"]
